<resources>
    <string name="facebook_app_id">1760474947570602</string>
    <string name="twitter_api_key">TUE2LAgL8zCZO0JAqKyFXffOA</string>
    <string name="app_name">H2HSampleApp</string>
    <string name="login">LOGIN</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_login">Password</string>
    <string name="send">SEND</string>
    <string name="forgot_password_hint_title">Forgot Password</string>
    <string name="forgot_password_hint">Enter your email address. You will receive a confirmation email with instruction to reset your password.</string>
    <string name="forgot_password_success_hint">An email has been sent regarding instructions on resetting the password.</string>
    <string name="forgot_success_hint_title">Email Sent</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="ok">OK</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="meeting_id">Meeting Id</string>
    <string name="edittext_meeting_id_hint">Enter A Meeting ID to Join</string>
    <string name="not_meeting_hints">You have not scheduled any meetings</string>
    <string name="upcoming_meetings_normal">Current &amp; Upcoming Meetings</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="meeting_id_cannot_be_empty">Meeting id cannot be empty</string>
    <string name="first_name_cannot_be_empty">First name cannot be empty</string>
    <string name="last_name_cannot_be_empty">Last name cannot be empty</string>
    <string name="email_format_error">Email format error</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="loading_text">loading&#8230;</string>
    <string name="network_request_timeout">Network request timeout, please check the network settings</string>
    <string name="parse_data_error">Parse data error</string>
    <string name="server_response_value_error">Server response value error, the error code is %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="meeting_subjec">MEETING SUBJECT</string>
    <string name="meeting_subjec_hints">Choose a subject</string>
    <string name="description">DESCRIPTION</string>
    <string name="description_hints">Add a description</string>
    <string name="add_attendees_email">Add Attendees Email</string>
    <string name="add_attendees_email_normal">Add attendees email</string>
    <string name="invite_attendees">INVITE ATTENDEES</string>
    <string name="invite_live_translators">INVITE LIVE TRANSLATORS</string>
    <string name="add_translators">Add Translators</string>
    <string name="translator_email">TRANSLATOR EMAIL</string>
    <string name="enter_translator_email">Enter translator email</string>
    <string name="language">LANGUAGE</string>
    <string name="select_language">Select Language</string>
    <string name="please_select_language">Please select language</string>
    <string name="meeting_type">MEETING TYPE</string>
    <string name="meeting_type_normal">Meeting Type</string>
    <string name="turn_on_meeting_recording">Turn on meeting recording</string>
    <string name="select_server_location">Select server location</string>
    <string name="date_text">DATE &amp; TIME</string>
    <string name="cancel_text">Cancel</string>
    <string name="set_text">Set</string>
    <string name="please_enter_your_meeting_subject">Please enter your meeting topic!</string>
    <string name="yes">Yes</string>
    <string name="please_fill_in_meeting_id">Please fill in meeting ID</string>
    <string name="upcoming_meetings">Upcoming</string>
    <string name="join_a_meeting">Join</string>
    <string name="start_a_meeting">Start</string>
    <string name="schedule_a_meeting">Schedule</string>
    <string name="join">Join</string>
    <string name="start">Start</string>
    <string name="create">Create</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="exit_meet_dialog_message">Do you want to disconnect the current session?</string>
    <string name="create_meet_hint">Hint: If you have participants in China, please choose China server. If not, choose the server near your location</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="new_password_cannot_be_empty">New password cannot be empty</string>
    <string name="password_verify">Your passwords are too short or too long (length: 5&#8211;20).</string>
    <string name="end_time_before_start_time">The End Time is Before Start Time</string>
    <string name="start_time_before_current_time">The Start Time is Before Current Time</string>
    <string name="exit_application_hint">Tap on again to exit H2H Live</string>
    <string name="default_server_location_name">Default</string>
    <string name="delete">Delete</string>
    <string name="sign_in">SIGN IN</string>
    <string name="join_meeting_big">JOIN MEETING</string>
    <string name="instant_meeting_big">INSTANT MEETING</string>
    <string name="instant_metting">Instant Meeting</string>
    <string name="your_name">Your Name</string>
    <string name="input_email_bottom_label">enter your email for additional features such as recording the meeting, scheduling and more.</string>
    <string name="meet_now_big">Meet Now</string>
    <string name="email_address_optional">Email Address (Optional)</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="help">Help</string>
    <string name="help_">HELP</string>
    <string name="register">Register</string>
    <string name="registered">Registered</string>
    <string name="join_live_now">Join Live Now</string>
    <string name="account_setting">Account Setting</string>
    <string name="personal_info">Personal Info</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="rate_h2h_meet">Rate H2H Meet</string>
    <string name="feedback">Feedback</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="phone_to_bind">to bind</string>
    <string name="album">Album</string>
    <string name="camera">Camera</string>
    <string name="default_photo">Default Photo</string>
    <string name="submit">Submit</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="feedback_subject">Subject</string>
    <string name="feedback_content_hint">Tap to provide feedback</string>
    <string name="country_or_region">Country/Region</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="region">Region</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="meet">Meet</string>
    <string name="share">Share</string>
    <string name="learn">Learn</string>
    <string name="Jobs">Jobs</string>
    <string name="account_info_update_success_hint">Thank you, your profile has been updated.</string>
    <string name="please_select_region">Please Select Country/Region</string>
    <string name="phone_cannot_be_empty">Phone cannot be empty</string>
    <string name="phone_number_cannot_be_empty">Phone number cannot be empty</string>
    <string name="phone_number_format_error">Phone number format error</string>
    <string name="amway_id_cannot_be_empty">Amway ID cannot be empty</string>
    <string name="btn_rate_dialog_left_text">NOT NOW</string>
    <string name="btn_rate_dialog_right_text">SUBMIT</string>
    <string name="rate_h2h_meet_star_hint">Tap a Star to Rate</string>
    <string name="rate_h2h_meet_edittext_hint">Leave a review (Optional)</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="live_support">Live Support</string>
    <string name="support_item_camera">Camera</string>
    <string name="support_item_microphone">Microphone</string>
    <string name="support_item_connection">Connection</string>
    <string name="support_item_board">LiveBoard</string>
    <string name="support_item_others">Others</string>
    <string name="support_item_invitation">Invitation</string>
    <string name="live_transcript">Live Transcript</string>
    <string name="allow_chat">Allow Chat</string>
    <string name="allow_chat_overay">Allow Overay</string>
    <string name="allow_raiseHand">Allow Raise Hand</string>
    <string name="showTimer">Show Timer</string>
    <string name="particiipant_settings">Participant Setting</string>
    <string name="device_settings">Device Settings</string>
    <string name="theme_colors">Theme Colors</string>
    <string name="settingmins">Mins…</string>
    <string name="support_request_title_submit">Submit Support Request</string>
    <string name="support_request_reason">Reason*</string>
    <string name="support_request_reason_volume_too_high">Volume too high</string>
    <string name="support_request_reason_volume_too_low">Volume too low</string>
    <string name="support_request_reason_echo">Echo</string>
    <string name="support_request_reason_materials">Materials</string>
    <string name="support_request_reason_delay">Delay</string>
    <string name="support_request_reason_whiteboard">Whiteboard</string>
    <string name="support_request_reason_no_video">No Video</string>
    <string name="support_request_reason_noise">Noise</string>
    <string name="support_request_reason_no_sound">No Sound</string>
    <string name="support_request_reason_other">Other</string>
    <string name="support_request_comments">Comments</string>
    <string name="support_request_best_reach">Best way to reach you</string>
    <string name="support_request_wechat">WeChat</string>
    <string name="support_request_wechat_input_hint">WeChat ID</string>
    <string name="support_request_phone">Phone</string>
    <string name="support_request_submitted_by">Submitted By: %1$s</string>
    <string name="support_request_version">Version: %1$s(build %2$d)</string>
    <string name="support_request_reason_value_volume_too_high" translatable="false">Volume too high</string>
    <string name="support_request_reason_value_volume_too_low" translatable="false">Volume too low</string>
    <string name="support_request_reason_value_echo" translatable="false">Echo</string>
    <string name="support_request_reason_value_materials" translatable="false">Materials</string>
    <string name="support_request_reason_value_delay" translatable="false">Delay</string>
    <string name="support_request_reason_value_whiteboard" translatable="false">Whiteboard</string>
    <string name="support_request_reason_value_no_video" translatable="false">No Video</string>
    <string name="support_request_reason_value_noise" translatable="false">Noise</string>
    <string name="support_request_reason_value_no_sound" translatable="false">No Sound</string>
    <string name="support_request_reason_value_other" translatable="false">Other</string>
</resources>