<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.meetingroom.activity.MoreSettingActivity"
    android:orientation="vertical">
<RelativeLayout
    android:id="@+id/rl_title"
    android:background="@color/grey_transparent"
    android:layout_width="match_parent"
    android:layout_height="@dimen/titleheight">
    <include
        layout="@layout/layout_back"/>
    <TextView
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:text="@string/more"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
    <TextView
        android:padding="10dp"
        android:background="@null"
        android:onClick="ok"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:text="@string/ok"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
</RelativeLayout>
    <TextView
        android:id="@+id/tv_live_support"
        style="@style/AccountSetting_TextView_Item"
        android:background="@drawable/white_bg_gray_bottom_left_border_layer"
        android:visibility="visible"
        android:text="@string/live_support"/>
    <TextView
        android:id="@+id/tv_submit_support_request"
        style="@style/AccountSetting_TextView_Item"
        android:background="@drawable/white_bg_gray_bottom_left_border_layer"
        android:visibility="visible"
        android:text="@string/support_request_title_submit"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/tv_live_transcript"
        style="@style/AccountSetting_TextView_Item"
        android:background="@drawable/white_bg_gray_bottom_left_border_layer"
        android:text="@string/live_transcript"/>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg_gray_bottom_left_border_layer">

        <TextView
            style="@style/AccountSetting_TextView_Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@android:color/transparent"
            android:text="@string/allow_chat"/>

        <com.kyleduo.switchbutton.SwitchButton
            android:checked="true"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/switchChat"
            style="@style/SwitchButtonMD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:kswThumbMarginLeft="-12dp"
            app:kswThumbMarginRight="-10dp"/>
        <RelativeLayout
            android:visibility="gone"
            android:paddingTop="5dp"
            android:id="@+id/rl_chat_overlay"
            android:layout_below="@+id/switchChat"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <com.kyleduo.switchbutton.SwitchButton

                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/switchChatOverlay"
                style="@style/SwitchButtonMD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                app:kswThumbMarginLeft="-12dp"
                app:kswThumbMarginRight="-10dp"/>
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/allow_chat_overay"
                style="@style/AccountSetting_TextView_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableRight="@android:color/transparent" />
        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_raisehand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg_gray_bottom_left_border_layer">

        <TextView
            style="@style/AccountSetting_TextView_Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:drawableRight="@android:color/transparent"
            android:text="@string/allow_raiseHand"/>

        <com.kyleduo.switchbutton.SwitchButton
            android:checked="true"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/switchRaisehand"
            style="@style/SwitchButtonMD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:kswThumbMarginLeft="-12dp"
            app:kswThumbMarginRight="-10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg_gray_bottom_left_border_layer">

        <TextView
            style="@style/AccountSetting_TextView_Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableRight="@android:color/transparent"
            android:text="@string/showTimer"/>

        <com.kyleduo.switchbutton.SwitchButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/switchshowTimer"
            style="@style/SwitchButtonMD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:kswThumbMarginLeft="-12dp"
            app:kswThumbMarginRight="-10dp"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_set_time"
            android:padding="20dp"
            android:layout_below="@+id/switchshowTimer"
            android:textColor="@color/red"
            android:text="@string/settingmins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:visibility="gone"
        android:id="@+id/tv_particiipant_setting"
        style="@style/AccountSetting_TextView_Item"
        android:background="@drawable/white_bg_gray_bottom_left_border_layer"
        android:text="@string/particiipant_settings"/>
    <TextView
        android:visibility="gone"
        android:id="@+id/tv_device_setting"
        style="@style/AccountSetting_TextView_Item"
        android:background="@drawable/white_bg_gray_bottom_left_border_layer"
        android:text="@string/device_settings"/>
    <TextView
        android:id="@+id/tv_theme_color"
        style="@style/AccountSetting_TextView_Item"
        android:background="@drawable/white_bg_gray_bottom_border_layer"
        android:text="@string/theme_colors"/>
</LinearLayout>
